updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an artist</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Puyallup, WA.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enojoy painting, phootography and being an active as possible </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Full time artist with unlimited supplies and standing showing at major galleries </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Mukilteo, WA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To use as a stepping stone to get into company branding. I would love to be able to combine art, tech and communication.</p>
     </section>
 
     <footer id="footer">
